k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vocal-remover
  labels:
    app: vocal-remover
